add: front end.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,71 @@
-<html>
-  <head>
-  </head>
-  <body>
-    <p>fuck</p>
-  </body>
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+        <link rel="stylesheet" href="css/main.css">
+        <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
+    </head>
+    <body>
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+
+        <!-- Add your site or application content here -->
+
+        <% include navbar %>
+
+        <div class="wrap">
+          <div class="table-view">
+            <div class="section">
+              <img src="img/nodejs-logo.png"/>
+              <h4>
+                <a href="/article">也谈基于NodeJS的全栈式开发</a>
+              </h4>
+              <div class="date">2014年05月05日</div>
+              <p class="summary">不存在会现在Insert Buffer里面先合并操作，通常合并了几个之后，再同时插入到数据库中</p>
+
+            </div>
+
+            <div class="section">
+              <img src="img/nodejs-logo.png"/>
+              <h4>
+                <a href="/article">也谈基于NodeJS的全栈式开发</a>
+              </h4>
+              <div class="date">2014年05月05日</div>
+              <p class="summary">不存在会现在Insert Buffer里面先合并操作，通常合并了几个之后，再同时插入到数据库中</p>
+
+            </div>
+
+            <div class="section">
+              <img src="img/nodejs-logo.png"/>
+              <h4>
+                <a href="/article">也谈基于NodeJS的全栈式开发</a>
+              </h4>
+              <div class="date">2014年05月05日</div>
+              <p class="summary">不存在会现在Insert Buffer里面先合并操作，通常合并了几个之后，再同时插入到数据库中</p>
+
+            </div>
+          </div>
+            <div class="pagination">
+              <div class="fl"><a href="#">上一页</a></div>
+              <div class="fr"><a href="#">下一页</a></div>
+              <div class="clearfix"></div>
+            </div>
+          
+        </div>
+
+
+        <% include footer %>
+
+    </body>
 </html>
