--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -5,5 +5,6 @@
     <li class="v2ex fl"><a href="#"></a></li>
     <li class="cnode fl"><a href="#"></a></li>
   </ul>
-  <p>Welcome to email to me</p>
+
+  <p>© 2014 youyudehexie 粤ICP备1302530</p>
 </div>
