--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -1,19 +1,19 @@
 
 <div class="navbar">
-  <a href="#">
-    <img class="avatar fl" src="img/avatar.jpg" />
+  <a href="/">
+    <img class="avatar fl" src="/img/avatar.jpg" />
   </a>
   <div>
     <li>
-      <a href="#">Profile</a>
+      <a href="/profile">Profile</a>
     </li>
 
     <li>
-      <a href="#">Archive</a>
+      <a href="/archive">Archive</a>
     </li>
 
     <li>
-      <a class="active" href="#">Home</a>
+      <a class="active" href="/">Home</a>
     </li>
   </div>
 </div>
