--- a/sass/blog.scss
+++ b/sass/blog.scss
@@ -2,6 +2,8 @@
   font-size: 17px;
   font-weight: 100;
   line-height: 30px;
+  margin-bottom: $block-margin-bottom;
+  padding-bottom: $block-margin-bottom;
 
   .title {
     margin-bottom: 15px;
