--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,11 +12,8 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="css/main.css">
-	      <link rel="stylesheet" href="bower_components/highlight/src/styles/monokai.css">
-        <script src="bower_components/highlight/build/highlight.pack.js"></script>
-        <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
-        <script>hljs.initHighlightingOnLoad();</script>
+        <link rel="stylesheet" href="/css/main.css">
+        <script src="/bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -27,18 +24,7 @@
 
         <% include navbar %>
         <div class="wrap">
-          <div class="archive">
-            <% categoires.forEach(function (category) { %>
-              <div class="box fl">
-                <a href="/timeline/<%= category.id %>">
-                  <img src="<%= category.primary_image %>" />
-                  <p class="count"><%= category.count %> 篇</p>
-                </a>
-                <p class="title"><%= category.name %></p>
-              </div>
-            <% })%>
-
-          </div>
+          <p>这家伙真心有点懒</p>
         </div>
         <% include footer %>
 
