--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -6,6 +6,8 @@
 // Type
 // --------------------------------------------------
 $font-color-default: #5e5e5d !default;
+/*$background-color-default: #f2f2f2 !default;*/
+
 $background-color-default: #f2f2f2 !default;
 $font-family-default: 'PT Serif', serif !default;
 $font-size-default: 16px !default;
