--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+/*$background-color-default: #f2f2f2 !default;*/
 /*! normalize.css v1.1.3 | MIT License | git.io/normalize */
 /* ==========================================================================
    HTML5 display definitions
