--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -11,12 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-
-        <link rel="stylesheet" href="css/main.css">
-	      <link rel="stylesheet" href="bower_components/highlight/src/styles/monokai.css">
-        <script src="bower_components/highlight/build/highlight.pack.js"></script>
-        <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
-        <script>hljs.initHighlightingOnLoad();</script>
+        <% include header %>
     </head>
     <body>
         <!--[if lt IE 7]>
