--- a/views/article.ejs
+++ b/views/article.ejs
@@ -12,10 +12,9 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="/bower_components/highlight/src/styles/monokai.css">
-        <script src="/bower_components/highlight/build/highlight.pack.js"></script>
-        <script src="http://upcdn.b0.upaiyun.com/libs/modernizr/modernizr-2.7.1.min.js"></script>
+        <% include header %>
+        <link rel="stylesheet" href="/dist//monokai.css">
+        <script src="/dist/js/highlight.pack.js"></script>
         <script>
             hljs.initHighlightingOnLoad();
         </script>
