--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -3,7 +3,7 @@
   <a href="/">
     <img class="avatar fl" src="/img/avatar.jpg" />
   </a>
-  <div>
+  <div id="nav">
     <li>
       <a href="/profile">Profile</a>
     </li>
@@ -13,7 +13,7 @@
     </li>
 
     <li>
-      <a class="active" href="/">Home</a>
+      <a href="/">Home</a>
     </li>
   </div>
 </div>
