--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,8 +12,7 @@
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-        <link rel="stylesheet" href="/css/main.css">
-        <script src="/bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
+        <% include header %>
     </head>
     <body>
         <!--[if lt IE 7]>
